--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,11 @@
         }
     ],
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "fabpot/goutte": "^4.0",
+        "guzzlehttp/guzzle": "^7.7",
+        "symfony/dom-crawler": "^6.0",
+        "symfony/http-client": "^6.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.10",
